Implemented a proper way to create typeExpressions